Updating repo for paper submission.

--- a/P3HT-Study/phase_diagram.ipynb
+++ b/P3HT-Study/phase_diagram.ipynb
@@ -1,31 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e6745ebd-633e-45b6-8a5a-67f47c6a7aa3",
+   "metadata": {},
+   "source": [
+    "# P3HT Order Parameter Phase Diagram Generation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ae0e11d-79cb-4741-ad0d-8ec63cefc885",
+   "metadata": {},
+   "source": [
+    "#### Imports"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "a2c6e534-9e9a-4635-9ece-d24755a1ab4c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/madilynpaul/miniconda3/envs/esp_val/lib/python3.8/site-packages/foyer/forcefield.py:8: DeprecationWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html\n",
-      "  from pkg_resources import resource_filename\n",
-      "/home/madilynpaul/miniconda3/envs/esp_val/lib/python3.8/site-packages/pkg_resources/__init__.py:3154: DeprecationWarning: Deprecated call to `pkg_resources.declare_namespace('mpl_toolkits')`.\n",
-      "Implementing implicit namespace packages (as specified in PEP 420) is preferred to `pkg_resources.declare_namespace`. See https://setuptools.pypa.io/en/latest/references/keywords.html#keyword-namespace-packages\n",
-      "  declare_namespace(pkg)\n",
-      "/home/madilynpaul/miniconda3/envs/esp_val/lib/python3.8/site-packages/pkg_resources/__init__.py:3154: DeprecationWarning: Deprecated call to `pkg_resources.declare_namespace('google')`.\n",
-      "Implementing implicit namespace packages (as specified in PEP 420) is preferred to `pkg_resources.declare_namespace`. See https://setuptools.pypa.io/en/latest/references/keywords.html#keyword-namespace-packages\n",
-      "  declare_namespace(pkg)\n",
-      "/home/madilynpaul/miniconda3/envs/esp_val/lib/python3.8/site-packages/mbuild/packing.py:23: DeprecationWarning: Use shutil.which instead of find_executable\n",
-      "  PACKMOL = find_executable(\"packmol\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
-    "\n",
     "from cmeutils.structure import order_parameter\n",
     "from fresnel import camera, pathtrace, light\n",
     "from gixstapose.diffractometer import Diffractometer, get_angle\n",
@@ -46,8 +44,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0da4b52f-5165-467f-8f03-025e751c3a03",
+   "metadata": {},
+   "source": [
+    "### Phase Diagram Class Definition:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "381fc9df-63ae-4f19-8e4a-b37bfbb9f9fd",
    "metadata": {},
    "outputs": [],
@@ -219,8 +225,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "beefe555-d9ab-40f2-bccb-f65a81e812fd",
+   "metadata": {},
+   "source": [
+    "### Order Parameter PD Generation: "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "2146e617-ce97-4193-97ef-7b8e13dd1946",
    "metadata": {},
    "outputs": [],
@@ -231,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "95f3fedf-9f2d-4422-858a-2e112dac9f01",
    "metadata": {},
    "outputs": [
@@ -253,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e266fd2b-f99a-4bda-888e-268135961496",
+   "id": "ed70174a-8de2-430d-be54-0e5f57299918",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -275,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
